--- a/UserChat/WebContent/WEB-INF/web.xml
+++ b/UserChat/WebContent/WEB-INF/web.xml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>UserChat</display-name>
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
-  
-  <servlet>
- 	<servlet-name>UserRegisterServlet</servlet-name>
- 	<servlet-class>com.controller.UserRegisterServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>UserRegisterServlet</servlet-name>
-  	<url-pattern>/userRegister</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	id="WebApp_ID" version="3.1">
+	<display-name>UserChat</display-name>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+
+	<servlet>
+		<servlet-name>UserRegisterServlet</servlet-name>
+		<servlet-class>com.controller.UserRegisterServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserRegisterServlet</servlet-name>
+		<url-pattern>/userRegister</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>ChatSubmitServlet</servlet-name>
+		<servlet-class>com.controller.ChatSubmitServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ChatSubmitServlet</servlet-name>
+		<url-pattern>/chatSubmit</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>ChatListServlet</servlet-name>
+		<servlet-class>com.controller.ChatListServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ChatListServlet</servlet-name>
+		<url-pattern>/chatList</url-pattern>
+	</servlet-mapping>
 </web-app>
