--- a/UserChat/WebContent/WEB-INF/web.xml
+++ b/UserChat/WebContent/WEB-INF/web.xml
@@ -43,4 +43,13 @@
 		<servlet-name>UserLoginServlet</servlet-name>
 		<url-pattern>/userLogin</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>ChatUnreadServlet</servlet-name>
+		<servlet-class>com.controller.ChatUnreadServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ChatUnreadServlet</servlet-name>
+		<url-pattern>/chatUnread</url-pattern>
+	</servlet-mapping>
 </web-app>
