--- a/UserChat/WebContent/WEB-INF/web.xml
+++ b/UserChat/WebContent/WEB-INF/web.xml
@@ -26,13 +26,22 @@
 		<url-pattern>/userLogin</url-pattern>
 	</servlet-mapping>
 	
-		<servlet>
+	<servlet>
 		<servlet-name>UserUpdateServlet</servlet-name>
 		<servlet-class>com.controller.UserUpdateServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>UserUpdateServlet</servlet-name>
 		<url-pattern>/userUpdate</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>UserProfileServlet</servlet-name>
+		<servlet-class>com.controller.UserProfileServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserProfileServlet</servlet-name>
+		<url-pattern>/userProfile</url-pattern>
 	</servlet-mapping>
 	
 	<servlet>
