--- a/UserChat/WebContent/WEB-INF/web.xml
+++ b/UserChat/WebContent/WEB-INF/web.xml
@@ -79,4 +79,13 @@
 		<servlet-name>ChatBoxServlet</servlet-name>
 		<url-pattern>/chatBox</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>BoardWriteServlet</servlet-name>
+		<servlet-class>com.controller.BoardWriteServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BoardWriteServlet</servlet-name>
+		<url-pattern>/boardWrite</url-pattern>
+	</servlet-mapping>
 </web-app>
