--- a/UserChat/WebContent/WEB-INF/web.xml
+++ b/UserChat/WebContent/WEB-INF/web.xml
@@ -96,5 +96,12 @@
 		<servlet-name>BoardUpdateServlet</servlet-name>
 		<url-pattern>/boardUpdate</url-pattern>
 	</servlet-mapping>
-	
+	<servlet>
+		<servlet-name>BoardDeleteServlet</servlet-name>
+		<servlet-class>com.controller.BoardDeleteServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BoardDeleteServlet</servlet-name>
+		<url-pattern>/boardDelete</url-pattern>
+	</servlet-mapping>
 </web-app>
